:art: Refined our argument types, tab completion is now consistent.